# waikiat.github.io

./: .gitignore  _quarto.yml  pyproject.toml
docs/: about.html  index.html  listings.json  search.json
docs/posts/polar-axis/: index.html
docs/posts/post-with-code/: index.html
docs/posts/welcome/: index.html
posts/polar-axis/: index.ipynb
posts/post-with-code/: index.qmd
posts/welcome/: index.qmd
